# Frai

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  INSTALLATION_STATUS.md  LICENSE  MANIFEST.in  Makefile  REFACTORING_PLAN.md  SECURITY.md  TROUBLESHOOTING.md  check_triton.py  check_user.py  codecov.yml  command_preprocessing_readme.md  config.json  debug_image_gen.py  demo_optimized_system.py  docker-compose.yml  example.env  fix_typing_imports.py  install.py  main.py  pyproject.toml  pyproject.toml.test  readme.md  requirements-dev.txt  requirements-test.txt  requirements.txt  run_all_tests.py  run_tests_quick.bat  setup.cfg  setup.py  test-image-gen.py  test_auth.py  test_basic_functionality.py  (+9 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci-cd-fixed.yml  ci-cd.yml  codeql-analysis.yml  container-security.yml  deploy.yml  docs-deployment-fixed.yml  docs-deployment.yml  release.yml  test.yml
Frai/: __init__.py
api/: api.py
api/auth/: __init__.py  authentication.py
api/chat/: __init__.py  endpoints.py
api/config/: __init__.py  config_api.py
api/image/: __init__.py  image_endpoints.py
api/models/: __init__.py  auth.py  chat.py
api/user/: compatibility_models.py  user_api.py
back/: __init__.py  models.py  run_tests.py
back/ai/: __init__.py  model_config.py  models.py
back/ai/chat/: __init__.py  model_loader.py  text_generator.py
back/ai/img2img/: __init__.py  pipeline.py  preprocessing.py  prompt_handler.py  style_transfer.py  utils.py
back/ai/sentiment/: __init__.py  pipeline.py  prompt_handler.py
back/ai/text2img/: __init__.py  pipeline.py  postprocessing.py  preprocessing.py  prompt_handler.py  utils.py
back/ai/txt2img/: __init__.py
back/ai/voicein/: __init__.py  audio_processor.py  pipeline.py
back/ai/voiceout/: __init__.py  pipeline.py
back/database/: __init__.py  models.py
back/database/chats/: __init__.py
back/preprocessor/: models.py
back/test/: README.md  conftest.py  pytest.ini  run_tests.py
demo/: README.md  api_usage_demo.py  api_usage_demo_clean.py  basic_chat_demo.py  basic_chat_demo_clean.py  image_generation_demo.py  image_generation_demo_clean.py  integration_demo.py  memory_management_demo.py  run_demos.py  utils.py
docs/: DEPLOYMENT.md  command_preprocessing_readme.md  example.env
environments/: .env.development  .env.production
flux/: __init__.py
front/: __init__.py
front/cli/: __init__.py  chat.py
legacy/: demo_optimized_system.py  flux_generator_backup.py  image_generator_legacy.py  image_generator_new_legacy.py  image_generator_optimized_legacy.py
modules/: api.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboards.yml
monitoring/grafana/datasources/: datasources.yml
orchestrator/: __init__.py
orchestrator/chat/: __init__.py  chat_orchestrator.py  models.py  orchestrator.py
orchestrator/chatmod/: __init__.py
orchestrator/img2img/: __init__.py
orchestrator/test/: README.md  conftest.py  pytest.ini  run_tests.py  test_integration.py
orchestrator/test/chat/: test_chat_orchestrator.py
orchestrator/test/chatmod/: test_chat_moderator.py  test_chat_moderator_fixed.py
orchestrator/text2img/: __init__.py
orchestrator/users/: __init__.py
orchestrator/voicein/: __init__.py
orchestrator/voiceout/: __init__.py
personal_chatter/: __init__.py
prototypes/: prototypechat.py
scripts/: release.ps1  release.py
services/: command_processor.py  config.py  document_search.py  image_generator.py  image_generator_clean.py  image_generator_new.py  image_generator_optimized.py  langchain_extension.py  online_search.py  runtime_tests.py  state.py  test_command_processor.py  user_memory.py  websocket_manager.py
services/ai/: __init__.py
services/ai/image_generation/: __init__.py  flux_generator.py  image_to_image.py  memory_manager.py  memory_manager_clean.py  progress_tracker.py  sentiment_feedback.py  style_presets.py
services/chat/: chat_manager.py  llm_interface.py  model_loader.py  pipeline.py  pipeline_config.py  title_generator.py  token_utils.py
services/cli/: chat_command.py  cli_handler.py  list_chats_command.py  login_command.py  navigation.py  new_chat_command.py  open_chat_command.py  register_command.py  title_generator.py
services/communication/: __init__.py
services/communication/websocket/: __init__.py  progress_broadcaster.py
services/core/: __init__.py  exceptions.py
services/core/command_interface/: __init__.py  command_router.py  command_system.py  response_formatter.py  service_interface.py
services/core/config/: __init__.py
services/database/: chat_database.py  chat_encryption.py  chat_utils.py  chat_xml.py  chats.py  connection.py  create_chat_table.py  create_password_table.py  create_session_table.py  create_user_table.py  models.py  passwords.py  reset_database.py  sessions.py  users.py
services/encryption/: chat_crypto.py
services/state/: __init__.py  abstract_state_model.py  observer.py
tests/: README.md  __init__.py  conftest.py  coverage.xml  pytest.ini  run_comprehensive_tests.py  run_tests.bat  run_tests.ps1  run_tests.py  run_tests.sh  run_tests_enhanced.bat  test_orchestrator.py
tests/back/ai/: README.md  __init__.py  conftest.py  run_ai_tests.py  test_chat.py  test_helpers.py
tests/blackbox/: __init__.py  test_chat_blackbox.py  test_end_to_end_workflows.py
tests/fixtures/: test_data.py
tests/implementation/: __init__.py  test_refactored_system_implementation.py
tests/integration/: __init__.py  test_auth_integration.py  test_chat_integration.py  test_image_generation_system.py
tests/performance/: __init__.py  test_performance_benchmarks.py
tests/smoke/: __init__.py  test_chat_smoke.py  test_smoke_chat_moderator.py
tests/unit/: __init__.py  test_api_endpoints.py  test_auth.py  test_auth_mock.py  test_simple.py
tests/utils/: __init__.py  mock_helpers.py
tools/: fix_typing_imports.py
(+100 files in other folders)
