[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frai"
dynamic = ["version"]
description = "AI-powered chat and image generation system"
readme = "readme.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "Frai Team", email = "personal-chatter@example.com"}]
keywords = ["ai", "chat", "image-generation", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "accelerate",
    "bcrypt",
    "chromadb",
    "ctransformers",
    "diffusers",
    "email-validator",
    "fastapi",
    "httptools",
    "inquirerpy",
    "langchain",
    "langchain-community",
    "passlib",
    "pip-chill",
    "psycopg2-binary",
    "pydantic[email]",
    "pyjwt",
    "python-dotenv",
    "python-jose",
    "python-multipart",
    "sentence-transformers",
    "sentencepiece",
    "sqlalchemy",
    "tf-keras",
    "transformers",
    "uvicorn",
    "watchfiles",
    "websockets",
    "xformers"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-benchmark>=4.0.0"
]

[project.scripts]
personal-chatter = "main:main"
pc-chat = "main:main"
pc-api = "api.api:start_backend_api_cli"

[project.urls]
Homepage = "https://github.com/yourusername/personal-chatter"
Repository = "https://github.com/yourusername/personal-chatter"

[tool.setuptools.dynamic]
version = {attr = "personal_chatter.__version__"}

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "examples*"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--cov=api",
    "--cov=services",
    "--cov-report=term-missing",
    "--cov-report=html"
]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance tests",
    "slow: Slow running tests"
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
