[metadata]
name = frai
version = attr: frai.__version__
author = Andy O
author_email = personal-chatter@example.com
description = AI chat application with local model support and API interfaces
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/personal-chatter
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Text Processing :: Linguistic
    Topic :: Communications :: Chat

[options]
packages = find:
python_requires = >=3.12
include_package_data = True
install_requires =
    accelerate
    bcrypt
    chromadb
    ctransformers
    diffusers
    fastapi
    httptools
    inquirerpy
    langchain
    langchain-community
    passlib
    pip-chill
    pyjwt
    python-dotenv
    python-jose
    python-multipart
    sentence-transformers
    sentencepiece
    tf-keras
    transformers
    uvicorn
    watchfiles
    websockets
    xformers

[options.packages.find]
exclude =
    tests
    *.tests
    *.tests.*
    tests.*
    docs
    examples

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pytest
    pytest-cov
    pytest-asyncio
    ruff
    pip-chill

docs =
    sphinx
    sphinx-rtd-theme
    myst-parser
    sphinx-autoapi

[options.entry_points]
console_scripts =
    personal-chatter = main:main
    pc-chat = main:main
    pc-api = api.api:start_backend_api_cli

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,venv,.venv

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*

[options]
packages = find:
python_requires = >=3.12
include_package_data = True
install_requires =
    accelerate
    bcrypt
    chromadb
    ctransformers
    diffusers
    fastapi
    httptools
    inquirerpy
    langchain
    langchain-community
    passlib
    pip-chill
    pyjwt
    python-dotenv
    python-jose
    python-multipart
    sentence-transformers
    sentencepiece
    tf-keras
    transformers
    uvicorn
    watchfiles
    websockets
    xformers

[options.packages.find]
exclude =
    tests
    *.tests
    *.tests.*
    tests.*
    docs
    examples

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pytest
    pytest-cov
    pytest-asyncio
    ruff
    pip-chill

docs =
    sphinx
    sphinx-rtd-theme
    myst-parser
    sphinx-autoapi

[options.entry_points]
console_scripts =
    personal-chatter = main:main
    pc-chat = main:main
    pc-api = api.api:start_backend_api_cli

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,venv,.venv

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*

[options]
packages = find:
python_requires = >=3.12
include_package_data = True
install_requires =
    accelerate
    bcrypt
    chromadb
    ctransformers
    diffusers
    fastapi
    httptools
    inquirerpy
    langchain
    langchain-community
    passlib
    pip-chill
    pyjwt
    python-dotenv
    python-jose
    python-multipart
    sentence-transformers
    sentencepiece
    tf-keras
    transformers
    uvicorn
    watchfiles
    websockets
    xformers

[options.packages.find]
exclude =
    tests
    *.tests
    *.tests.*
    tests.*
    docs
    examples

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pytest
    pytest-cov
    pytest-asyncio
    ruff
    pip-chill

docs =
    sphinx
    sphinx-rtd-theme
    myst-parser
    sphinx-autoapi

[options.entry_points]
console_scripts =
    personal-chatter = main:main
    pc-chat = main:main
    pc-api = api.api:start_backend_api_cli

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,venv,.venv

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
